Made changes to remove warnings